# solana-arbitrage-bot

./: Cargo.toml  Config.example.toml  README.md
src/: main.rs
src/app/config/: credential.rs  fee.rs
src/app/settings/: mod.rs  relayer.rs
src/engine/discovery/: simulate_amount_in.rs
src/engine/execute/: process_update.rs
src/engine/runtime/: fee_cost.rs
