[package]
name = "solana-arbitrage-bot"
version = "0.1.0"
edition = "2021"
description = "Solana arbitrage bot: discovers and executes profitable DEX swaps via Jupiter (Rust, RPC-only)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hodlwarden/solana-arbitrage-bot"
readme = "README.md"
keywords = ["solana", "arbitrage", "bot", "dex", "jupiter"]

[lib]
name = "jupiter_arbitrage_bot_offchain"
path = "src/lib.rs"

[[bin]]
name = "jupiter_arbitrage_bot_offchain"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bincode = "1"
borsh = "1.5"
bs58 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
futures = "0.3"
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client.git", rev = "337c65d677ceea33f64adf8271698cd6190c60e6" }
once_cell = "1"
phf = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = "2"
solana-relayer-adapter-rust = "3"
solana-rpc-client-nonce-utils = "2"
solana-sdk = "2"
spl-associated-token-account = "6"
spl-token = "6"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "fs"] }
toml = "0.8"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yellowstone-grpc-client = "8"
yellowstone-grpc-proto = "8"
